<resources>
    <string name="app_name">BTLOOP</string>
    <string name="facebook_app_id">1780507841960975</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="buy">Mua hàng</string>
    <string name="pls_login">Mời bạn đăng nhập</string>
    <string name="os">Os</string>
    <string name="price">Giá</string>
    <string name="front_camera">Camera trước</string>
    <string name="back_camera">Camera sau</string>
    <string name="memory">Bộ nhớ</string>
    <string name="screen">Màn hình</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="top_newest">Những sản phẩm mới</string>
    <string name="info_order">Thông tin mua hàng</string>
    <string name="customer_name">Tên khách hàng :</string>
    <string name="email">Email :</string>
    <string name="address">Địa chỉ :</string>
    <string name="phone_number">Số điện thoại :</string>
    <string name="product_name">Tên sản phẩm :</string>
    <string name="price_">Giá :</string>
    <string name="buy_info">Thông tin mua hàng</string>
    <string name="type_payment">Hình thức thanh toán :</string>
</resources>
