<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="steven.btloop.activity.InfoOderActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:gravity="center"
                android:text="@string/info_order"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/padding_20"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="@dimen/padding_20"
                    android:layout_marginRight="@dimen/padding_20"
                    android:background="@color/blue" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_15"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/customer_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:paddingLeft="@dimen/padding_10"
                        android:text="Nguyễn Văn Trường"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_15"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/padding_10"
                        android:text="Nguyễn Văn Trường"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_15"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingLeft="@dimen/padding_10"
                        android:text="Nguyễn Văn Trường"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_15"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/phone_number"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edt_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:inputType="phone"
                        android:paddingLeft="@dimen/padding_10"
                        android:text="Nguyễn Văn Trường"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/product_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_name_product"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:paddingLeft="@dimen/padding_10"
                        android:text="Nguyễn Văn Trường"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/price_"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingLeft="@dimen/padding_10"
                        android:text="Nguyễn Văn Trường"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/type_payment"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingLeft="@dimen/padding_10"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="italic" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_buy"
                android:text="@string/buy"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
